Fix links, add whitespace, and add Github information

--- a/app/resonant-laboratory/views/overlays/StartingScreen/style.scss
+++ b/app/resonant-laboratory/views/overlays/StartingScreen/style.scss
@@ -2,13 +2,10 @@
 
 #Overlay #StartingScreen {
     position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50em;
-    height: 38em;
     background-color: $panelBackgroundColor;
     display: flex;
-    padding: 1em;
+    margin: 1em;
+    padding: 1em 1em 3em 1em;
     border: 1px solid rgba($shadowColor,0.2);
     box-shadow: 0 5px 15px rgba($shadowColor,0.5);
 }
